vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_non_result_if_with_sql_condition.vv
struct User {
	id int
}

fn main() {
	outer := true
	fallback := $embed_file(@FILE)
	_ := if outer {
		if (sql db {
			select from User
		}).len > 0 {
			$embed_file(@FILE)
		} else {
			fallback
		}
		0
	} else {
		1
	}
}
